--- a/design/themes/yacht/css/addons/my_module/styless.less
+++ b/design/themes/yacht/css/addons/my_module/styless.less
@@ -49,8 +49,8 @@ a:hover{
   line-height: 24px!important;
   font-weight: 400;
 }
-.add_boat a, .weather{
-  font-size: 11px;
+.add_boat a, .weather span, #currencies_74 span{
+  font-size: 11px!important;
   font-weight: 600;
   line-height: 16px;
 }
@@ -63,7 +63,10 @@ a:hover{
 .add_boat:hover path, .add_boat:hover a{
   color: #1DD1B9;
   fill: #1DD1B9;
-
+}
+#sw_dropdown_244{
+  border: 1px solid gray;
+  border-radius: 10px;
 }
 
 /* /my_module */
