--- a/design/themes/yacht/css/addons/my_module/styless.less
+++ b/design/themes/yacht/css/addons/my_module/styless.less
@@ -5,6 +5,7 @@ body, p, div, li, a{
   font-family: Inter !important;
   font-style: normal;
   font-weight: normal;
+  color: #000000;
 }
 a:hover{
   text-decoration: none;
@@ -65,8 +66,25 @@ a:hover{
   fill: #1DD1B9;
 }
 #sw_dropdown_244{
-  border: 1px solid gray;
-  border-radius: 10px;
+  border: 0.5px solid rgba(0, 0, 0, 0.2);
+  border-radius: 100px;
+  padding: 3px 0 3px 5px;
+  min-width: 56px;
+}
+#sw_dropdown_244 i{
+  vertical-align: middle;
+}
+.ty-icon-moon-user{
+  padding: 3px;
+  border: 2px solid gray;
+  color: #ffffff;
+}
+
+#dropdown_244{
+  background: #FFFFFF;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.16);
+  border-radius: 12px;
+  border:none;
 }
 
 /* /my_module */
